# gh-agent-sync

./: .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  README.md  link-agents-skills.sh  pyproject.toml
.github/workflows/: ci-cd.yml  commitlint.yml  release.yml
src/copilot_linker/: cli.py
src/gh_agent_sync/: __main__.py  cli.py
